# ErvinCC

./: .gitignore  CMakeLists.txt  LRAnalyzer.cpp  LRAnalyzer.h  compile.cpp  cst_node.cpp  grammar.cpp  grammar.h  grammer.cpp  grammer.h  input.txt  main.cpp  newrules.txt  output.txt  parse_rules.cpp  readme.md  test.cpp  utils.cpp  utils.h
codegen/: codegen.cpp  codegen.h
parser/form-generator/: grammar.cpp  grammar.h
parser/parser/: LR-parser.cpp  LR-parser.h  cst_node.cpp  cst_node.h
rule-files/: input.txt  lr1_form.txt
scanner/: scanner.cpp
semantic/: ast_node.cpp  ast_node.h  exceptions.h  semantic.cpp  semantic.h  table.cpp  table.h  types.cpp  types.h  variables.cpp  variables.h
testfiles/: input.txt  lr1_form.txt  output.txt  rules.txt
utils/: datafloweq.cpp  datafloweq.h  test.txt  testforms.md  testformsL.md  utils.cpp  utils.h
